--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -8,13 +8,6 @@
     <link rel="stylesheet" href="css/dashboard.css" />
     <link rel="stylesheet" href="css/font.css" />
     <link rel="shortcut icon" href="image/icon-1.ico" />
-    <!-- jquery這裡 -->
-    <script src="jquery-ui-1.14.1/external/jquery/jquery.js"></script>
-    <link
-      rel="stylesheet"
-      href="jquery-ui-1.14.1/themes/smoothness/jquery-ui.css"
-    />
-    <script src="jquery-ui-1.14.1/jquery-ui.js"></script>
 
     <!-- Google tag (gtag.js) -->
     <script
@@ -31,5 +24,197 @@
       gtag("config", "G-EPSXJPDH6L");
     </script>
   </head>
-  <body></body>
+  <body>
+    <table class="layout">
+      <tr>
+        <!-- Sidebar -->
+        <td class="sidebar">
+          <p style="background-color: olivedrab; color: ghostwhite">
+            草率季<br />TPABF
+          </p>
+          <p>攤商管理<br />Dashboard</p>
+          <hr class="sidebar-hr" />
+          <p>聯絡我們<br />Contact</p>
+          <hr class="sidebar-hr" />
+          <p>常見問題<br />FAQ</p>
+          <hr class="sidebar-hr" />
+          <div class="sidebar-middle">
+            <p class="rotated-link">
+              <a href="https://taipeiartbookfair.com/"
+                >https://taipeiartbookfair.com/</a
+              >
+            </p>
+          </div>
+          <p style="background-color: blueviolet; color: ghostwhite">
+            帳號管理<br />Account
+          </p>
+        </td>
+
+        <!-- Middle Column -->
+        <td class="mid">
+          <table width="100%">
+            <tr>
+              <td colspan="2">
+                <span class="label">品牌名稱 Brand Name</span><br />什麼什麼書店
+              </td>
+            </tr>
+            <tr>
+              <td><span class="label">身份類別 Role</span><br />a◎ Creator</td>
+              <td>
+                <span class="label">作品類別 Catagory</span><br />b◎ Drawings
+              </td>
+            </tr>
+            <tr>
+              <td colspan="2">
+                <span class="label">品牌簡介 Bio</span><br />
+                「SHU
+                SHU」是一個家庭品牌，由一家人提供當代飾物與各種形式的創作<br />
+                同時也是女兒兩歲時，每次看到飛機，會笑著展開雙臂所發出的聲音：啾啾～<br />
+                不論是誰，何種年紀，角色身份，都應保有自由探索與創造的樂趣。<br />
+                希望我們創造的內容，能成為大家日常生活中的美好陪伴。
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <span class="label">代表人 Contact Person</span><br />王大明
+              </td>
+              <td><span class="label">Email</span><br />damin@gmail.com</td>
+            </tr>
+            <tr>
+              <td><span class="label">Phone</span><br />(+31)0923485729</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td><span class="label">國籍 Nationality</span><br />JAPAN</td>
+              <td>
+                <span class="label">簽證申請 Visa Requirement</span><br />Not
+                Require
+              </td>
+            </tr>
+          </table>
+        </td>
+
+        <!-- Right Column -->
+        <td class="right">
+          <table width="100%">
+            <tr>
+              <td colspan="3" style="padding: 0; border: none">
+                <table style="width: 100%; table-layout: auto">
+                  <tr style="padding: 0; border: none">
+                    <td style="width: 50%">
+                      <span class="label">報名編號</span><br /><span
+                        style="font-size: 3rem"
+                        >25-BC001</span
+                      >
+                    </td>
+                    <td style="width: 25%">
+                      <span class="label">錄取結果</span><br /><strong
+                        >錄取</strong
+                      >
+                    </td>
+                    <td style="width: 25%">
+                      <span class="label">報名狀態</span><br />未完成報名
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+
+            <tr>
+              <td colspan="3" style="padding: 0; border: none">
+                <table style="width: 100%; table-layout: auto">
+                  <tr>
+                    <!-- 左邊：攤種（上） -->
+                    <td
+                      rowspan="2"
+                      style="width: 30%; border-right: 1px dashed black"
+                    >
+                      <span class="label">攤種 Booth Type</span><br />
+                      大書攤
+                      <hr
+                        style="
+                          border-top: 1px dashed black;
+                          margin: 6px 0;
+                          border-bottom: none;
+                        "
+                      />
+                      基礎設備： 桌面（120*60cm) 1 個、椅子 2 張、工作證 2
+                      張、草率簿 1 本（含露出一面）
+                    </td>
+
+                    <!-- 右邊：付款方案 -->
+                    <td style="width: 70%">
+                      <tr>
+                        <td style="border-right: 1px solid black">
+                          <strong>方案一：基礎攤費</strong><br />5000 NTD
+                          (含稅)<br />
+                          僅基礎方案
+                          <p style="color: red; font-size: 12px">
+                            請在付款時務必填入以下資料：<br />Email:
+                            email@gmail.com<br />報名編號: 25-BC001
+                          </p>
+                          <div class="pay-button">付款 Pay</div>
+                        </td>
+                        <td>
+                          <strong>方案二：基礎攤費+工作證一張</strong><br />6000
+                          NTD (含稅)<br />
+                          適合有輪班擺攤需求之攤主
+                          <p style="color: red; font-size: 12px">
+                            請在付款時務必填入以下資料：<br />Email:
+                            email@gmail.com<br />報名編號: 25-BC001
+                          </p>
+                          <div class="pay-button">付款 Pay</div>
+                        </td>
+                      </tr>
+                      <span class="label">注意事項 Notice</span><br />
+                      1. 請保留付款憑證。<br />
+                      2. 付款後無法修改方案。<br />
+                      3. 6/15 前將更新狀態。
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <span class="label">徵件流程表 Open Call Schedule</span><br />
+                <table style="width: 100%; margin-top: 10px">
+                  <tr>
+                    <td>
+                      <span class="rotated"
+                        >徵件開始<br />Open Call Announce</span
+                      >
+                    </td>
+                    <td>
+                      <span class="rotated"
+                        >徵件結束<br />Open Call is out</span
+                      >
+                    </td>
+                    <td>
+                      <span class="rotated"
+                        >錄取結果出爐<br />Open Call Result</span
+                      >
+                    </td>
+                    <td>
+                      <span class="rotated"
+                        >報名狀態更新後聯繫確認<br />Application status
+                        update</span
+                      >
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>05/01</td>
+                    <td>06/15</td>
+                    <td>06/30</td>
+                    <td>06/30</td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
