--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -107,9 +107,15 @@
                         >25-BC001</span
                       >
                     </td>
-                    <td style="width: 25%">
-                      <span class="label">錄取結果</span><br /><strong
-                        >錄取</strong
+                    <td style="width: 25%; background-color: lemonchiffon">
+                      <span class="label">錄取結果</span><br /><span
+                        style="
+                          font-size: 2rem;
+                          color: blueviolet;
+                          font-weight: bold;
+                          vertical-align: baseline;
+                        "
+                        >錄取</span
                       >
                     </td>
                     <td style="width: 25%">
@@ -128,14 +134,16 @@
                     <td
                       rowspan="2"
                       style="
-                        width: 30%;
+                        width: 25%;
                         border-top: 0.5px solid pink;
                         margin: 6px 0;
                         border-left: 1px solid black;
                       "
                     >
-                      <span class="label">攤種 Booth Type</span><br />
-                      大書攤
+                      <span class="label">攤種 Booth Type</span><br /><span
+                        style="font-size: 2rem"
+                        >創作商品攤</span
+                      >
                       <hr
                         style="
                           border-top: 1px dashed black;
@@ -143,14 +151,14 @@
                           border-bottom: none;
                         "
                       />
-                      基礎設備：桌面（120×60cm）1個、椅子2張、工作證2張、草率簿1本（含露出一面）
+                      基礎設備：<br />桌面（120×60cm）X1<br />椅子X2<br />工作證X2<br />草率簿X1（含露出一面）
                     </td>
 
                     <!-- 右上：付款方案，兩格 -->
                     <td
                       colspan="2"
                       style="
-                        width: 70%;
+                        width: 75%;
                         padding: 0;
                         border-top: 0.5px solid pink;
                         border-left: none;
@@ -161,14 +169,38 @@
                       <table style="width: 100%">
                         <tr>
                           <td
+                            colspan="2"
+                            style="
+                              border-left: none;
+                              background: #000;
+                              color: #fff;
+                              font-size: 0.75rem;
+                              padding: 2px 6px;
+                            "
+                          >
+                            付款方案 Billing Information
+                          </td>
+                        </tr>
+                        <tr>
+                          <td
                             style="
                               border-top: 0.5px solid pink;
                               border-left: none;
                               border-bottom: 1px dashed black;
+                              background-color: aliceblue;
                             "
                           >
-                            <strong>方案一：基礎攤費</strong><br />5000 NTD
-                            (含稅)<br />
+                            <strong>方案一：基礎攤費</strong>
+                            <hr
+                              style="
+                                border-top: 1px dashed black;
+                                margin: 6px 0;
+                                border-bottom: none;
+                              "
+                            />
+                            <span style="font-size: 2rem">5,000 NTD </span
+                            ><small>(含稅)</small>
+                            <br />
                             僅基礎方案
                             <p style="color: red; font-size: 12px">
                               請在付款時務必填入以下資料：<br />
@@ -183,10 +215,19 @@
                               border-left: none;
                               border-bottom: 1px dashed black;
                               border-right: none;
+                              background-color: aliceblue;
                             "
                           >
-                            <strong>方案二：基礎攤費+工作證一張</strong
-                            ><br />6000 NTD (含稅)<br />
+                            <strong>方案二：基礎攤費+工作證一張</strong>
+                            <hr
+                              style="
+                                border-top: 1px dashed black;
+                                margin: 6px 0;
+                                border-bottom: none;
+                              "
+                            />
+                            <span style="font-size: 2rem">6,000 NTD </span
+                            ><small>(含稅)</small><br />
                             適合有輪班擺攤需求之攤主
                             <p style="color: red; font-size: 12px">
                               請在付款時務必填入以下資料：<br />
@@ -222,7 +263,7 @@
             </tr>
 
             <tr>
-              <td>
+              <td style="border-top: none">
                 <span class="label">徵件流程表 Open Call Schedule</span><br />
                 <table style="width: 100%; margin-top: 10px">
                   <tr>
