layout so much better

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -101,25 +101,39 @@
               <td colspan="3" style="padding: 0; border: none">
                 <table style="width: 100%; table-layout: auto">
                   <tr style="padding: 0; border: none">
-                    <td style="width: 50%">
-                      <span class="label">報名編號</span><br /><span
-                        style="font-size: 3rem"
-                        >25-BC001</span
-                      >
+                    <!-- 報名編號 -->
+                    <td style="width: 40%">
+                      <span class="label">報名編號 Application Number</span
+                      ><br />
+                      <div>
+                        <span style="font-size: 3rem">25-BC001</span>
+                      </div>
                     </td>
-                    <td style="width: 25%; background-color: lemonchiffon">
-                      <span class="label">錄取結果</span><br /><span
-                        style="
-                          font-size: 2rem;
-                          color: blueviolet;
-                          font-weight: bold;
-                          vertical-align: baseline;
-                        "
-                        >錄取</span
-                      >
+
+                    <!-- 錄取結果 -->
+                    <td style="width: 30%">
+                      <span class="label">錄取結果 Application Status</span
+                      ><br />
+                      <div style="vertical-align: middle; font-size: 2.7rem">
+                        <span
+                          style="
+                            font-size: 2rem;
+                            color: blueviolet;
+                            font-weight: bold;
+                          "
+                          >錄取</span
+                        >
+                      </div>
                     </td>
-                    <td style="width: 25%">
-                      <span class="label">報名狀態</span><br />未完成報名
+
+                    <!-- 報名狀態 -->
+                    <td style="width: 30%">
+                      <span class="label">報名狀態 Status & Billing</span><br />
+                      <div style="vertical-align: middle; font-size: 2.7rem">
+                        <span style="font-size: 2rem; color: black"
+                          >尚未完成報名</span
+                        >
+                      </div>
                     </td>
                   </tr>
                 </table>
@@ -151,10 +165,23 @@
                           border-bottom: none;
                         "
                       />
-                      基礎設備：<br />桌面（120×60cm）X1<br />椅子X2<br />工作證X2<br />草率簿X1（含露出一面）
+                      基礎設備：
+                      <ul
+                        style="
+                          list-style-type: none;
+                          margin: 0;
+                          padding-left: 0em;
+                        "
+                      >
+                        <li>– 桌面<small>(120×60cm)</small> ×1</li>
+                        <li>– 椅子 ×2</li>
+                        <li>– 工作證 ×2</li>
+                        <li>– 草率簿 ×1<small> (含露出一面)</small></li>
+                      </ul>
+
+                      <!-- 右上：付款方案，兩格 -->
                     </td>
 
-                    <!-- 右上：付款方案，兩格 -->
                     <td
                       colspan="2"
                       style="
@@ -187,10 +214,10 @@
                               border-top: 0.5px solid pink;
                               border-left: none;
                               border-bottom: 1px dashed black;
-                              background-color: aliceblue;
+                              background-color: lemonchiffon;
                             "
                           >
-                            <strong>方案一：基礎攤費</strong>
+                            <strong>方案一：</strong>基礎攤費
                             <hr
                               style="
                                 border-top: 1px dashed black;
@@ -215,10 +242,10 @@
                               border-left: none;
                               border-bottom: 1px dashed black;
                               border-right: none;
-                              background-color: aliceblue;
+                              background-color: lemonchiffon;
                             "
                           >
-                            <strong>方案二：基礎攤費+工作證一張</strong>
+                            <strong>方案二：</strong>基礎攤費+工作證一張
                             <hr
                               style="
                                 border-top: 1px dashed black;
@@ -253,9 +280,13 @@
                       "
                     >
                       <span class="label">注意事項 Notice</span><br />
-                      1. 請自行評估需求繳費，繳款後我們不再提供更改申請選項。<br />
-                      2. 付款之後請自行留存發票。<br />
-                      3. 我們將於7月15日對帳後更新報名以及付款狀態。
+                      <ul style="margin: 0; padding-left: 20px">
+                        <li>
+                          請自行評估需求繳費，繳款後我們不再提供更改申請選項。
+                        </li>
+                        <li>付款之後請自行留存發票。</li>
+                        <li>我們將於 7 月 15 日對帳後更新報名以及付款狀態。</li>
+                      </ul>
                     </td>
                   </tr>
                 </table>
