--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -30,7 +30,12 @@
         <!-- Sidebar -->
         <td class="sidebar">
           <p style="background-color: olivedrab; color: ghostwhite">
-            草率季<br />TPABF
+            <!-- 草率季<br />TPABF -->
+            <img
+              src="image/icon-1.ico"
+              alt="logo"
+              style="width: 4.5vw; height: auto; transform: rotate(45deg)"
+            />
           </p>
           <p>攤商管理<br />Dashboard</p>
           <hr class="sidebar-hr" />
@@ -40,6 +45,7 @@
           <hr class="sidebar-hr" />
           <div class="sidebar-middle">
             <p class="rotated-link">
+              草率季 Taipei Art Book Fair<br />
               <a href="https://taipeiartbookfair.com/"
                 >https://taipeiartbookfair.com/</a
               >
@@ -55,23 +61,35 @@
           <table width="100%">
             <tr>
               <td colspan="2">
-                <span class="label">品牌名稱 Brand Name</span><br />什麼什麼書店
+                <span class="label">品牌名稱 Brand Name</span><br /><span
+                  style="font-size: 3rem"
+                  >Yoshimi Saito</span
+                >
               </td>
             </tr>
             <tr>
-              <td><span class="label">身份類別 Role</span><br />a◎ Creator</td>
+              <td><span class="label">身份類別 Role</span><br />a1 Creator</td>
               <td>
-                <span class="label">作品類別 Catagory</span><br />b◎ Drawings
+                <span class="label">作品類別 Catagory</span><br />b3 Drawings
               </td>
             </tr>
             <tr>
               <td colspan="2">
                 <span class="label">品牌簡介 Bio</span><br />
-                「SHU
-                SHU」是一個家庭品牌，由一家人提供當代飾物與各種形式的創作<br />
-                同時也是女兒兩歲時，每次看到飛機，會笑著展開雙臂所發出的聲音：啾啾～<br />
-                不論是誰，何種年紀，角色身份，都應保有自由探索與創造的樂趣。<br />
-                希望我們創造的內容，能成為大家日常生活中的美好陪伴。
+                Born in Tokyo, currently based in Takanabe, in the southern
+                region of Japan. After graduating from the Ceramic Art Course at
+                Kyoto University of the Arts, I expanded my artistic practice to
+                include clay sculpting, along with drawing on paper. In 2022,
+                during an artist residency in Iceland, I created and exhibited a
+                series of ceramic works titled Huldufólk. My recent activities
+                include the solo exhibition Soft Wind (Kinkan Gallery, 2025), as
+                well as starring in and contributing artworks to the short film
+                Yume No Hate Made (Till the End of the World), directed by
+                Natsuka Kusano, part of the omnibus film Performing Hiroshima
+                (2023). At the Taipei Art Book Fair, I will present a new zine
+                featuring recent works created in Takanabe, the town I recently
+                moved to. Through this publication, I hope to share the unique
+                charm and appeal of Takanabe with a wider audience.
               </td>
             </tr>
             <tr>
@@ -118,8 +136,10 @@
                         <span
                           style="
                             font-size: 2rem;
-                            color: blueviolet;
+                            color: black;
                             font-weight: bold;
+                            padding: 0px 10px 0px 10px;
+                            background-color: lime;
                           "
                           >錄取</span
                         >
@@ -230,9 +250,10 @@
                             <br />
                             僅基礎方案
                             <p style="color: red; font-size: 12px">
-                              請在付款時務必填入以下資料：<br />
+                              ！請在付款時務必填入以下資料：<br />
                               Email: email@gmail.com<br />
-                              報名編號: 25-BC001
+                              備註欄位: 25-BC001<br /><br />
+                              如因填寫其他錯誤資料造成對帳問題，將導致報名失敗。
                             </p>
                             <div class="pay-button">付款 Pay</div>
                           </td>
@@ -257,9 +278,10 @@
                             ><small>(含稅)</small><br />
                             適合有輪班擺攤需求之攤主
                             <p style="color: red; font-size: 12px">
-                              請在付款時務必填入以下資料：<br />
+                              ！請在付款時務必填入以下資料：<br />
                               Email: email@gmail.com<br />
-                              報名編號: 25-BC001
+                              備註欄位: 25-BC001<br /><br />
+                              如因填寫其他錯誤資料造成對帳問題，將導致報名失敗。
                             </p>
                             <div class="pay-button">付款 Pay</div>
                           </td>
