form ratio change

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>草率季Taipei Art Book Fair</title>
+    <title>Dashboard - 草率季Taipei Art Book Fair</title>
     <link rel="stylesheet" href="css/dashboard.css" />
     <link rel="stylesheet" href="css/font.css" />
     <link rel="shortcut icon" href="image/icon-1.ico" />
@@ -85,11 +85,11 @@
                 </td>
               </tr>
               <tr>
-                <td>
+                <td style="width: 50%">
                   <span class="label">身份類別 Role</span><br />a1 Creator
                 </td>
-                <td>
-                  <span class="label">作品類別 Catagory</span><br />b3 Drawings
+                <td style="width: 50%">
+                  <span class="label">作品類別 Category</span><br />b3 Drawings
                 </td>
               </tr>
               <tr>
@@ -113,12 +113,35 @@
                 </td>
               </tr>
               <tr>
-                <td style="width: 40%">
-                  <span class="label">國籍 Nationality</span><br />JAPAN
-                </td>
-                <td style="width: 60%">
-                  <span class="label">簽證申請 Visa Requirement</span><br />Not
-                  Require
+                <td colspan="2" style="padding: 0">
+                  <table style="width: 100%; table-layout: fixed">
+                    <tr>
+                      <td
+                        style="
+                          width: 25%;
+                          border-top: 0.5px solid pink;
+                          border-left: none;
+                          border-right: 1px dashed black;
+                          border-bottom: none;
+                        "
+                      >
+                        <span class="label">國籍 Nationality</span><br />JAPAN
+                      </td>
+                      <td
+                        style="
+                          width: 75%;
+
+                          border-top: 0.5px solid pink;
+                          border-left: none;
+                          border-right: none;
+                          border-bottom: none;
+                        "
+                      >
+                        <span class="label">簽證申請 Visa Requirement</span
+                        ><br />Not Require
+                      </td>
+                    </tr>
+                  </table>
                 </td>
               </tr>
               <tr>
@@ -143,25 +166,21 @@
                 </td>
               </tr>
               <tr>
-                <td colspan="2">
+                <td>
                   <span class="label">Website</span><br />
                   https://www.nowplacesf.com/publications
                 </td>
-              </tr>
-              <tr>
-                <td colspan="2">
+                <td>
                   <span class="label">Instagram</span><br />
-                  @51personaeproject
+                  https://www.instagram.com/robot.ocean/
                 </td>
               </tr>
               <tr>
-                <td colspan="2">
+                <td>
                   <span class="label">Facebook</span><br />
                   <i style="color: lightgray">None</i>
                 </td>
-              </tr>
-              <tr>
-                <td colspan="2">
+                <td>
                   <span class="label">Whatsapp</span><br />
                   <i style="color: lightgray">None</i>
                 </td>
@@ -304,7 +323,7 @@
                                   border-bottom: none;
                                 "
                               />
-                              <span style="font-size: 2rem">5,000 NTD </span
+                              <span style="font-size: 2rem">8,000 NTD </span
                               ><small>(含稅)</small>
                               <br />
                               僅基礎方案
@@ -333,7 +352,7 @@
                                   border-bottom: none;
                                 "
                               />
-                              <span style="font-size: 2rem">6,000 NTD </span
+                              <span style="font-size: 2rem">13,000 NTD </span
                               ><small>(含稅)</small><br />
                               適合有輪班擺攤需求之攤主
                               <p style="color: red; font-size: 12px">
