--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -37,7 +37,9 @@
               style="width: 4.5vw; height: auto; transform: rotate(45deg)"
             />
           </p>
-          <p>攤商管理<br />Dashboard</p>
+          <p style="background-color: black; color: ghostwhite">
+            攤商管理<br />Dashboard
+          </p>
           <hr class="sidebar-hr" />
           <p>聯絡我們<br />Contact</p>
           <hr class="sidebar-hr" />
@@ -72,14 +74,15 @@
                       color: black;
                       cursor: pointer;
                       transition: color 0.2s;
-                      translate: rotate(90deg);
+                      transform: rotate(90deg);
                     "
-                    onmouseover="this.style.color='blue'"
+                    onmouseover="this.style.color='darkolivegreen'"
                     onmouseout="this.style.color='black'"
-                    onclick="editBrandName()"
-                    title="編輯品牌名稱"
+                    onclick="location.href='edit.html'"
+                    title="編輯"
                     >&#9998;</span
                   >
+
                   <span class="label">品牌名稱 Brand Name</span><br />
                   <span style="font-size: 3rem">Yoshimi Saito</span>
                 </td>
@@ -95,21 +98,29 @@
               <tr>
                 <td colspan="2">
                   <span class="label">品牌簡介 Bio</span><br />
-                  Born in Tokyo, currently based in Takanabe, in the southern
-                  region of Japan. After graduating from the Ceramic Art Course
-                  at Kyoto University of the Arts, I expanded my artistic
-                  practice to include clay sculpting, along with drawing on
-                  paper. In 2022, during an artist residency in Iceland, I
-                  created and exhibited a series of ceramic works titled
-                  Huldufólk. My recent activities include the solo exhibition
-                  Soft Wind (Kinkan Gallery, 2025), as well as starring in and
-                  contributing artworks to the short film Yume No Hate Made
-                  (Till the End of the World), directed by Natsuka Kusano, part
-                  of the omnibus film Performing Hiroshima (2023). At the Taipei
-                  Art Book Fair, I will present a new zine featuring recent
-                  works created in Takanabe, the town I recently moved to.
-                  Through this publication, I hope to share the unique charm and
-                  appeal of Takanabe with a wider audience.
+                  <div class="bio">
+                    Yoshimi Saito is a Japanese artist and ceramicist. She is
+                    known for her unique approach to ceramics, which combines
+                    traditional techniques with a contemporary aesthetic. Her
+                    work often explores themes of nature, mythology, and the
+                    human experience, resulting in pieces that are both visually
+                    striking and thought-provoking. Born in Tokyo, currently
+                    based in Takanabe, in the southern region of Japan. After
+                    graduating from the Ceramic Art Course at Kyoto University
+                    of the Arts, I expanded my artistic practice to include clay
+                    sculpting, along with drawing on paper. In 2022, during an
+                    artist residency in Iceland, I created and exhibited a
+                    series of ceramic works titled Huldufólk. My recent
+                    activities include the solo exhibition Soft Wind (Kinkan
+                    Gallery, 2025), as well as starring in and contributing
+                    artworks to the short film Yume No Hate Made (Till the End
+                    of the World), directed by Natsuka Kusano, part of the
+                    omnibus film Performing Hiroshima (2023). At the Taipei Art
+                    Book Fair, I will present a new zine featuring recent works
+                    created in Takanabe, the town I recently moved to. Through
+                    this publication, I hope to share the unique charm and
+                    appeal of Takanabe with a wider audience.
+                  </div>
                 </td>
               </tr>
               <tr>
@@ -396,7 +407,7 @@
               </tr>
 
               <tr>
-                <td style="border-top: none">
+                <td style="border-top: none; border-right: 2px solid black">
                   <span class="label">徵件流程表 Open Call Schedule</span><br />
                   <table style="width: 100%; margin-top: 10px">
                     <tr>
