--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Forgot Password - 草率季Taipei Art Book Fair</title>
+    <link rel="shortcut icon" href="image/icon-1.ico" />
+
     <!-- <link rel="stylesheet" href="css/style.css" /> -->
     <link rel="stylesheet" href="css/font.css" />
     <link rel="shortcut icon" href="css/font.css" />
@@ -200,6 +202,18 @@
         color: palegreen;
         background-color: olive;
       }
+      #length-rule,
+      #uppercase-rule,
+      #lowercase-rule,
+      #number-rule,
+      #match-rule {
+        margin-top: 3px;
+        font-size: 12px;
+        color: plum;
+      }
+      .valid {
+        color: green !important;
+      }
     </style>
   </head>
   <body>
@@ -274,25 +288,125 @@
           step2Div.className = "login-form";
           step2Div.style.marginTop = "10px";
           step2Div.innerHTML = `
-            <form action="/reset-password" method="POST">
-              <div class="input-box">
-                <label for="newPassword">設置新密碼 Set new password</label>
-                <input type="password" name="newPassword" required />
-              </div>
-              <div class="input-box">
-                <label for="confirmPassword">確認新密碼 Confirm new password</label>
-                <input type="password" name="confirmPassword" required />
-              </div>
-              <div class="submit-box">
-                <button type="submit">設置新密碼 Set New Password</button>
-              </div>
-            </form>
-          `;
+  <form action="/reset-password" method="POST" onsubmit="return validatePasswordForm()">
+    <div class="input-box">
+      <label for="newPassword">設置新密碼 Set new password</label>
+      <input type="password" id="newPassword" name="newPassword" required />
+    </div>
+    <div style="font-size: 12px; margin: 5px;">
+      <div id="length-rule">✕ 至少8字元 (at least 8 characters)</div>
+      <div id="uppercase-rule">✕ 含有一個大寫字母 (at least one uppercase letter)</div>
+      <div id="lowercase-rule">✕ 含有一個小寫字母 (at least one lowercase letter)</div>
+      <div id="number-rule">✕ 含有一個數字 (at least one number)</div>
+    </div>
+    <div class="input-box">
+      <label for="confirmPassword">確認新密碼 Confirm new password</label>
+      <input type="password" id="confirmPassword" name="confirmPassword" required />
+    </div>
+    <div class="submit-box">
+      <button type="submit">設置新密碼 Set New Password</button>
+    </div>
+  </form>
+`;
+
           document.querySelector(".login-wrapper").appendChild(step2Div);
+
+          setTimeout(() => {
+            const newPasswordInput = document.getElementById("newPassword");
+            const confirmPasswordInput =
+              document.getElementById("confirmPassword");
+
+            newPasswordInput.addEventListener("input", updatePasswordRules);
+            confirmPasswordInput.addEventListener("input", updatePasswordRules);
+
+            // Add this inside your setTimeout after adding event listeners
+            confirmPasswordInput.addEventListener("input", function () {
+              const warning = document.getElementById("password-match-warning");
+              if (
+                newPasswordInput.value &&
+                confirmPasswordInput.value &&
+                newPasswordInput.value !== confirmPasswordInput.value
+              ) {
+                if (!warning) {
+                  const warnDiv = document.createElement("div");
+                  warnDiv.id = "password-match-warning";
+                  warnDiv.style.color = "red";
+                  warnDiv.style.fontSize = "12px";
+                  warnDiv.textContent = "密碼不一致 Passwords do not match";
+                  confirmPasswordInput.parentNode.appendChild(warnDiv);
+                }
+              } else {
+                if (warning) warning.remove();
+              }
+            });
+          }, 100); // 確保元素渲染後再掛事件
         } else {
           alert("驗證碼錯誤 Incorrect verification code.");
         }
       });
+
+      function updatePasswordRules() {
+        const password = document.getElementById("newPassword").value;
+
+        const lengthRule = document.getElementById("length-rule");
+        const upperRule = document.getElementById("uppercase-rule");
+        const lowerRule = document.getElementById("lowercase-rule");
+        const numberRule = document.getElementById("number-rule");
+
+        if (password.length >= 8) {
+          lengthRule.textContent = "✓ 至少8字元 (at least 8 characters)";
+          lengthRule.classList.add("valid");
+        } else {
+          lengthRule.textContent = "✕ 至少8字元 (at least 8 characters)";
+          lengthRule.classList.remove("valid");
+        }
+
+        if (/[A-Z]/.test(password)) {
+          upperRule.textContent =
+            "✓ 含有一個大寫字母 (at least one uppercase letter)";
+          upperRule.classList.add("valid");
+        } else {
+          upperRule.textContent =
+            "✕ 含有一個大寫字母 (at least one uppercase letter)";
+          upperRule.classList.remove("valid");
+        }
+
+        if (/[a-z]/.test(password)) {
+          lowerRule.textContent =
+            "✓ 含有一個小寫字母 (at least one lowercase letter)";
+          lowerRule.classList.add("valid");
+        } else {
+          lowerRule.textContent =
+            "✕ 含有一個小寫字母 (at least one lowercase letter)";
+          lowerRule.classList.remove("valid");
+        }
+
+        if (/[0-9]/.test(password)) {
+          numberRule.textContent = "✓ 含有一個數字 (at least one number)";
+          numberRule.classList.add("valid");
+        } else {
+          numberRule.textContent = "✕ 含有一個數字 (at least one number)";
+          numberRule.classList.remove("valid");
+        }
+      }
+
+      function validatePasswordForm() {
+        const password = document.getElementById("newPassword").value;
+        const confirm = document.getElementById("confirmPassword").value;
+
+        if (
+          password.length >= 8 &&
+          /[A-Z]/.test(password) &&
+          /[a-z]/.test(password) &&
+          /[0-9]/.test(password) &&
+          password === confirm
+        ) {
+          return true;
+        } else {
+          alert("請確認密碼符合所有條件");
+          return false;
+        }
+      }
     </script>
   </body>
 </html>
