no account then jump back to login.html

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -23,6 +23,7 @@
 
       gtag("config", "G-EPSXJPDH6L");
     </script>
+    <script src="js/dashboard-basic.js"></script>
   </head>
   <body>
     <table class="layout">
