--- a/edit.html
+++ b/edit.html
@@ -23,6 +23,7 @@
 
       gtag("config", "G-EPSXJPDH6L");
     </script>
+    <script src="js/dashboard-basic.js"></script>
   </head>
   <body>
     <table class="layout">
